css add with html

--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
-<!doctype html>
-<html>
-	<head>
-		<title>DWSampleFiles</title>
-		<meta charset="utf-8"/>
-		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-      <style type="text/css">* {font-family: Inter;} body {padding: 2em;}</style>
-	</head>
-	<body>
-		<div>
-			<h1>Hello world!</h1>
-			<p>This is sample 1.</p>
-            <!-- Hi! -->
-			<p>
-				<a href="https://www.dwsamplefiles.com/">Learn More</a>
-			</p>
-		</div>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Your Portfolio</title>
+</head>
+<body>
+    <header>
+        <h1>Your Name</h1>
+        <p>Web Developer & Designer</p>
+    </header>
+    
+    <section class="about">
+        <h2>About Me</h2>
+        <p>Your brief introduction goes here.</p>
+    </section>
+
+    <section class="projects">
+        <h2>Projects</h2>
+        <!-- Add your projects here -->
+    </section>
+
+    <!-- Add more sections for your portfolio -->
+
+    <footer>
+        <p>Contact: your@email.com</p>
+    </footer>
+</body>
 </html>
