--- a/index.html
+++ b/index.html
@@ -3,29 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Your Portfolio</title>
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Your Name</h1>
-        <p>Web Developer & Designer</p>
-    </header>
-    
-    <section class="about">
-        <h2>About Me</h2>
-        <p>Your brief introduction goes here.</p>
-    </section>
+    <h1>Devloper Portfolio</h1>
+    <!-- this -->
+    <h1 id="-about-me-">💫 About Me:</h1>
+<p>I&#39;m a PG-Big data analytics based in CDAC-Pune.<br>🔭 I’m currently working on Big-data<br>🌱 I’m currently learning Python<br>👯 I’m looking to collaborate on [Big-data Projects]<br>💬 Ask me about Software and OS(especially Linux)<br>📫 How to reach me: poproot4@gmail.com<br>portfolio <a href="https://parth-root.github.io/">https://parth-root.github.io/</a><br></p>
+<h1 id="-tech-stack-">💻 Tech Stack:</h1>
+<p><img src="https://img.shields.io/badge/c-%2300599C.svg?style=for-the-badge&amp;logo=c&amp;logoColor=white" alt="C"> <img src="https://img.shields.io/badge/java-%23ED8B00.svg?style=for-the-badge&amp;logo=java&amp;logoColor=white" alt="Java"> <img src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&amp;logo=python&amp;logoColor=ffdd54" alt="Python"> <img src="https://img.shields.io/badge/r-%23276DC3.svg?style=for-the-badge&amp;logo=r&amp;logoColor=white" alt="R"> <img src="https://img.shields.io/badge/shell_script-%23121011.svg?style=for-the-badge&amp;logo=gnu-bash&amp;logoColor=white" alt="Shell Script"> <img src="https://img.shields.io/badge/AWS-%23FF9900.svg?style=for-the-badge&amp;logo=amazon-aws&amp;logoColor=white" alt="AWS"> <img src="https://img.shields.io/badge/azure-%230072C6.svg?style=for-the-badge&amp;logo=azure-devops&amp;logoColor=white" alt="Azure"> <img src="https://img.shields.io/badge/Google%20Cloud-%234285F4.svg?style=for-the-badge&amp;logo=google-cloud&amp;logoColor=white" alt="Google Cloud"> <img src="https://img.shields.io/badge/apache-%23D42029.svg?style=for-the-badge&amp;logo=apache&amp;logoColor=white" alt="Apache"> <img src="https://img.shields.io/badge/MongoDB-%234ea94b.svg?style=for-the-badge&amp;logo=mongodb&amp;logoColor=white" alt="MongoDB"> <img src="https://img.shields.io/badge/mysql-%2300f.svg?style=for-the-badge&amp;logo=mysql&amp;logoColor=white" alt="MySQL"> <img src="https://img.shields.io/badge/Linux-FCC624?style=for-the-badge&amp;logo=linux&amp;logoColor=black" alt="LINUX"> <img src="https://img.shields.io/badge/docker-%230db7ed.svg?style=for-the-badge&amp;logo=docker&amp;logoColor=white" alt="Docker"> <img src="https://img.shields.io/badge/-RaspberryPi-C51A4A?style=for-the-badge&amp;logo=Raspberry-Pi" alt="Raspberry Pi"></p>
+<h1 id="-github-stats-">📊 GitHub Stats:</h1>
+<p><img src="https://github-readme-stats.vercel.app/api?username=Parth-root&amp;theme=great-gatsby&amp;hide_border=false&amp;include_all_commits=true&amp;count_private=true" alt=""><br/>
+<img src="https://github-readme-streak-stats.herokuapp.com/?user=Parth-root&amp;theme=great-gatsby&amp;hide_border=false" alt=""><br/>
+<img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Parth-root&amp;theme=great-gatsby&amp;hide_border=false&amp;include_all_commits=true&amp;count_private=true&amp;layout=compact" alt=""></p>
+<h1 id="social">Social</h1>
+<p><a href="https://www.linkedin.com/in/parth-jansari-63393616b/">linkedin</a>
+<a href="https://www.hackerrank.com/poproot4">Hecker Rank</a></p>
+<h3 id="-random-dev-quote">✍️ Random Dev Quote</h3>
+<p><img src="https://quotes-github-readme.vercel.app/api?type=horizontal&amp;theme=radical" alt=""></p>
+<hr>
+<p><a href="https://visitcount.itsvg.in"><img src="https://visitcount.itsvg.in/api?id=Parth-root&amp;icon=0&amp;color=0" alt=""></a></p>
 
-    <section class="projects">
-        <h2>Projects</h2>
-        <!-- Add your projects here -->
-    </section>
-
-    <!-- Add more sections for your portfolio -->
-
-    <footer>
-        <p>Contact: your@email.com</p>
-    </footer>
+    <!-- to this -->
+    <p>Website to show my Portfolio</p>
 </body>
 </html>
